Add description of compareDB module (RS-105961)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1822,6 +1822,56 @@ SELECT * FROM employees WHERE (surname = ?)
 	\item Сделайте \ttt{commit} или \ttt{rollback} транзакции, нажав на соответствующие кнопки.
 \end{enumerate}
 
+\newpage
+
+\section{Модуль сравнения баз данных}\label{sec:compareDB_module}
+
+Инструмент \textit{Сравнить базы данных} сравнивает две базы данных и генерирует \ttt{SQL-скрипт}, позволяющий сделать две базы идентичными. 
+
+\begin{redimportant}
+	В результате работы модуля у сравниваемых баз будет идентичная структура, но не содержание.
+\end{redimportant}	
+
+В меню \textit{Инструменты} выберите \textit{Сравнить базы данных}. Откроется вкладка \textit{Сравнение баз данных}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/compareDB_module.png}
+	\caption{Модуль сравнения баз данных}
+\end{figure}
+
+Блок \textit{Соединения}:
+\begin{itemize}
+	\item База-образец -- база данных, к состоянию которой нужно привести целевую базу;
+	\item Целевая база -- база данных, к которой будут применяться изменения.
+\end{itemize}	
+
+Блок \textit{Атрибуты} представляет собой список элементов базы данных, которые нужно/не нужно учитывать при сравнении.
+
+Блок \textit{Параметры} представляет собой список условий, влияющих на сравнение баз и формирование \ttt{SQL-скрипта}, приводящего структуру целевой базы к состоянию базы-образца:
+\begin{itemize}
+	\item Поиск \ttt{CREATE} элементов -- если установлена галочка, то в \ttt{SQL-скрипт} будут добавлены \ttt{SQL-запросы} для создания объектов, которые отсутствуют в целевой базе, но есть в базе-образце;
+	\item Поиск \ttt{ALTER} элементов -- если установлена галочка, то в \ttt{SQL-скрипт} будут добавлены \ttt{SQL-запросы} для изменения объектов с одинаковыми именами и типами данных;
+	\item Поиск \ttt{DROP} элементов -- если установлена галочка, то в \ttt{SQL-скрипт} будут добавлены \ttt{SQL-запросы} для удаления объектов, которые есть в целевой базе, но отсутствуют в базе-образце;
+	\item Игнорировать комментарии - учитывать ли комментарии при сравнении баз;
+	\item Игнорировать вычисляемые столбцы -- учитывать ли вычисляемые столбцы при сравнении баз; 
+	\item Игнорировать \ttt{PK/FK/UK/CK} -- учитывать ли ограничения при сравнении баз.
+\end{itemize}
+
+Найденные различия будут записаны во вкладку \textit{Вывод}. Во вкладке \textit{SQL} будет сформирован скрипт, приводящий структуру целевой базы к структуре базы-образца.
+
+Пример сравнения баз данных:
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/compareDB_module_example.png}
+	\caption{Найденные различия}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/compareDB_module_exampleSQL.png}
+	\caption{Сформированный SQL-скрипт}
+\end{figure}
 
 \newpage
 
