Add scheduler description (RS-74593)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1723,6 +1723,45 @@ SELECT * FROM employees WHERE (surname = ?)
 
 \anonsubsubsection{Удаление табличных пространств}
 На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени табличного пространства и выберите пункт всплывающего меню \textit{Удалить <имя табличного пространства>}. Откроется  диалоговое окно для подтверждения или отката операции удаления пространства (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
+
+\anonsubsection{ЗАДАЧИ}
+
+\anonsubsubsection{Создание задачи}
+
+Диалоговое окно \textit{Создать задачу} позволяет создавать новые зададания для планировщика в выбранном соединении с базой данных.
+
+\begin{enumerate}[leftmargin=26pt]
+	\item На панели \textit{Подключения} щелкните правой кнопкой мыши по объекту ЗАДАЧИ и выберите пункт \textit{Создать задачу} всплывающего меню. Откроется диалоговое окно.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.6\linewidth]{img/create_job.png}
+	\end{figure}
+	\item Выберите открытое соединение с базой данных.
+	\item Введите уникальное имя задания.
+	\item Необязательные параметры \textit{Время запуска} и \textit{Время завершения} задают промежуток времени, в котором будет запускаться задание. Значение \ttt{NULL} используется, чтобы убрать интервал. 
+	\item Выберите тип задачи. Тип \ttt{BASH} дает возможность запланировать выполнение команды ОС. Такой тип заданий может создавать только \ttt{SYSDBA}. Поле \textit{Активный} указывает, что задание будет запускаться по расписанию. 
+	\item Введите содержание задания. 
+	\item Заполните расписание, в соответствии с которым будет выполняться задание. Если поставить галочку для поля \textit{Cron}, то откроются расширенные параметры расписания.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.6\linewidth]{img/create_job_cron.png}
+	\end{figure}
+\end{enumerate}
+
+\anonsubsubsection{Изменение задачи}
+
+На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по задаче и выберите пункт всплывающего меню \textit{Редактировать <задача>}. Также открыть окно редактирования можно двойным кликом по задаче.
+
+Для просмотра событий выполнения задачи откройте вкладку \textit{Журнал}. Параметры \textit{Начало периода} и \textit{Конец периода} позволяют указать период, за который нужно отобразить лог. Чтобы посмотреть события только определённого типа, поставьте нужные галочки для полей \textit{RUN\_START}, \textit{RUN\_FINISH} и \textit{RUN\_ERROR}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.6\linewidth]{img/create_job_log.png}
+\end{figure}
+
+\anonsubsubsection{Удаление задачи}
+
+На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по задаче и выберите пункт всплывающего меню \textit{Удалить <задача>}. Откроется  диалоговое окно для подтверждения или отката операции удаления задачи. Для подтверждения нажмите кнопку «Подтвердить».
+
 \newpage
 \section{Перекомпиляция объектов}\label{sec:recompile_objects}
 \begin{enumerate}[leftmargin=20pt]
