See RS-96426 added "Query Shortcuts" to the menu (Tools)

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -195,7 +195,7 @@ action.license-command=Лицензия
 action.log-in-account-command.description=Войти на reddatabase.ru
 action.log-in-account-command=Войти на reddatabase.ru
 action.manage-bookmarks-command=Управление закладками запросов
-action.manage-shortcuts-command=Управление горячими клавишами запросов
+action.manage-shortcuts-command=Шаблоны SQL
 action.map-erd-command=ER-диаграмма базы данных
 action.move-row-down-command=Сдвинуть текст вниз
 action.move-row-up-command=Сдвинуть текст вверх
@@ -1660,7 +1660,7 @@ QueryEditorToolBar.execute-at-cursor-command=Выполнить оператор
 QueryEditorToolBar.execute-command=Выполнить запрос как единый блок
 QueryEditorToolBar.execute-script-command=Выполнить SQL скрипт
 QueryEditorToolBar.execute-selection-command=Выполнить выделенный SQL скрипт
-QueryEditorToolBar.manage-shortcuts-command=Показать сокращения SQL
+QueryEditorToolBar.manage-shortcuts-command=Шаблоны SQL
 QueryEditorToolBar.print-explained-plan-command=Вывести детальный план запроса
 QueryEditorToolBar.print-plan-command=Вывести план запроса
 QueryEditorToolBar.query-bookmarks=Закладки для хранения запросов
