--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -208,6 +208,24 @@ Red Expert обладает рядом полезных компонентов: 
 		\includegraphics[width = 0.8\linewidth]{img/er_diagram.png}
 	\end{figure}
 
+\anonsubsubsection[Модуль сравнения баз данных]{\hyperref[sec:compareDB_module]{Модуль сравнения баз данных}}
+
+Инструмент сравнивает две базы данных и генерирует \ttt{SQL-скрипт}, позволяющий сделать две базы идентичными. 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.8\linewidth]{img/compareDB_module.png}
+\end{figure}
+
+\anonsubsubsection[Импорт данных из файла]{\hyperref[sec:import_data_from_file]{Импорт данных из файла}}
+
+Инструмент для импорта данных из файла в таблицу.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.95\linewidth]{img/ImportData.png}
+\end{figure}
+
 \anonsubsubsection[Компонент для сравнения типов данных]{\hyperref[sec:compare_datatype]{Компонент для сравнения типов данных}}
 
 Для поиска аналогичных типов данных двух разных СУБД, которые наиболее точно соответствуют друг другу.
@@ -597,7 +615,7 @@ Red Expert использует информацию, доступную из у
 При попытке создания базы данных может возникнуть ошибка шифрования сетевого соединения (wire encryption). Для поддержки шифрования необходима версия Java не ниже 1.8.0\_161 или установленное JCE дополнение. В противном случае следует изменить параметр \ttt{firebird.conf}: \ttt{WireCrypt = Disabled}.
 \end{redremark}
 
-\anonsubsection{Импорт данных из файла}
+\anonsubsection{Импорт данных из файла}\label{sec:import_data_from_file}
 
 \begin{enumerate}
 	\item Откройте вкладку "Import data from file" на центральной панели. Для этого выберите пунк меню \textit{База данных} $\rightarrow$ \textit{Импорт данных из файла}. Откроется вкладка:
