--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1342,8 +1342,11 @@ GrantManagerPanel.AllObjects=All Objects
 GrantManagerPanel.CancelFill=Cancel waiting fill 
 GrantManagerPanel.ColumnsOf=Columns Of 
 GrantManagerPanel.DisplayAll=Display All
+GrantManagerPanel.Exceptions=Exceptions
 GrantManagerPanel.Field=Field
 GrantManagerPanel.Functions=Functions
+GrantManagerPanel.Generators=Generators
+GrantManagerPanel.GlobalTemporaries=Global Temporaries
 GrantManagerPanel.GrantManager=Grant Manager
 GrantManagerPanel.GrantedOnly=Granted Only
 GrantManagerPanel.GrantsOn=Grants On
@@ -1355,7 +1358,7 @@ GrantManagerPanel.PrivelegesFor=Privileges For
 GrantManagerPanel.Procedures=Procedures
 GrantManagerPanel.Refresh=Refresh
 GrantManagerPanel.Roles=Roles
-GrantManagerPanel.ShowSystemTables=Show System Tables
+GrantManagerPanel.ShowSystemObjects=Show System Objects
 GrantManagerPanel.Tables=Tables
 GrantManagerPanel.Triggers=Triggers
 GrantManagerPanel.Type=Type
