add user->objects privileges tab for objects

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1368,6 +1368,8 @@ GrantManagerPanel.Views=Views
 GrantManagerPanel.connection.close=Connection Close!
 GrantManagerPanel.message.notConnected=No connections available!
 GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
+GrantManagerPanel.objectUsers=Object->Users
+GrantManagerPanel.userObjects=User->Objects
 HeapMemoryPanel.Garbage-collection-released=Garbage collection released 
 HeapMemoryPanel.GarbageCollection=Garbage collection released 
 HeapMemoryPanel.JavaVirtualMachines=Java Virtual Machine's object heap.
