--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1368,6 +1368,8 @@ GrantManagerPanel.Views=Представления
 GrantManagerPanel.connection.close=Соединение прервано!
 GrantManagerPanel.message.notConnected=Нет доступных подключений!
 GrantManagerPanel.message.terminate-grant=Вы уверены, что хотите прервать процесс назначения привилегий?
+GrantManagerPanel.objectUsers=Объект->Пользователи
+GrantManagerPanel.userObjects=Пользователь->Объекты
 HeapMemoryPanel.Garbage-collection-released=Сборка мусора завершена, очищено 
 HeapMemoryPanel.GarbageCollection=Сборщик мусора освободил 
 HeapMemoryPanel.JavaVirtualMachines=объектов виртуальной машины Java.
