correct the appearance of creating and editing jobs, as well as correct translations

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1759,7 +1759,7 @@ SELECT * FROM employees WHERE (surname = ?)
 	\item Необязательные параметры \textit{Время запуска} и \textit{Время завершения} задают промежуток времени, в котором будет запускаться задание. Значение \ttt{NULL} используется, чтобы убрать интервал. 
 	\item Выберите тип задачи. Тип \ttt{BASH} дает возможность запланировать выполнение команды ОС. Такой тип заданий может создавать только \ttt{SYSDBA}. Поле \textit{Активный} указывает, что задание будет запускаться по расписанию. 
 	\item Введите содержание задания. 
-	\item Заполните расписание, в соответствии с которым будет выполняться задание. Если поставить галочку для поля \textit{Cron}, то откроются расширенные параметры расписания.
+	\item Заполните расписание, в соответствии с которым будет выполняться задание. Если поставить галочку \textit{Расширенные свойства}, то откроются расширенные параметры расписания.
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width = 0.6\linewidth]{img/create_job_cron.png}
