--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1880,16 +1880,16 @@ WindowAddUser.properties=properties
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
 WindowsSchedulerPanel.Day/s=Day(s)
-WindowsSchedulerPanel.Day=day
+WindowsSchedulerPanel.EveryDay=Every day
 WindowsSchedulerPanel.Days=Days
 WindowsSchedulerPanel.Every=Every
 WindowsSchedulerPanel.EveryUnit=Every {0}
-WindowsSchedulerPanel.Hour=hour
-WindowsSchedulerPanel.Minute=minute
-WindowsSchedulerPanel.Month=month
+WindowsSchedulerPanel.EveryHour=Every hour
+WindowsSchedulerPanel.EveryMinute=Every minute
+WindowsSchedulerPanel.EveryMonth=Every month
 WindowsSchedulerPanel.Months=Months
 WindowsSchedulerPanel.Week/s=Week(s)
-WindowsSchedulerPanel.Week=week
+WindowsSchedulerPanel.EveryWeek=Every week
 WindowsSchedulerPanel.Weeks=Weeks
 WindowsSchedulerPanel.day={0} day
 WindowsSchedulerPanel.h={0} h
