--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1880,16 +1880,16 @@ WindowAddUser.properties=Свойства
 WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
 WindowsSchedulerPanel.Day/s=День/Дня/Дней
-WindowsSchedulerPanel.Day=день
+WindowsSchedulerPanel.EveryDay=Каждый день
 WindowsSchedulerPanel.Days=Дни
 WindowsSchedulerPanel.Every=Каждые
 WindowsSchedulerPanel.EveryUnit=Кажд(ый/ую) {0}
-WindowsSchedulerPanel.Hour=час
-WindowsSchedulerPanel.Minute=минуту
-WindowsSchedulerPanel.Month=месяц
+WindowsSchedulerPanel.EveryHour=Каждый час
+WindowsSchedulerPanel.EveryMinute=Каждую минуту
+WindowsSchedulerPanel.EveryMonth=Каждый месяц
 WindowsSchedulerPanel.Months=Месяцы
 WindowsSchedulerPanel.Week/s=Неделю/Недели/Недель
-WindowsSchedulerPanel.Week=неделю
+WindowsSchedulerPanel.EveryWeek=Каждую неделю
 WindowsSchedulerPanel.Weeks=Недели
 WindowsSchedulerPanel.day={0} д
 WindowsSchedulerPanel.h={0} ч
