Added Russian localization for pop-up menus in the windows for creating a database and connecting to a database

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1721,6 +1721,9 @@ SimpleButtonsPanel.ok=OK
 SimpleDataItemViewerPanel.DataType=Data Type:
 SimpleDataItemViewerPanel.Size=Size:
 SimpleDataItemViewerPanel.Text=Text
+SimpleTextComponentPopUpMenu.Copy=Copy
+SimpleTextComponentPopUpMenu.Paste=Paste
+SimpleTextComponentPopUpMenu.Cut=Cut
 SystemOutputPanel.title=Output Console
 SystemResources.findedOldSettings=The settings of the previous version of application were found.\nApply these settings in this version?
 TableColumnIndexTableModel.Expression=Expression
@@ -1901,3 +1904,4 @@ WizardProcessPanel.Cancel=Cancel
 WizardProcessPanel.Help=Help
 WizardProcessPanel.Next=Next
 WizardProcessPanel.Steps=Steps
+
