--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1721,6 +1721,9 @@ SimpleButtonsPanel.ok=OK
 SimpleDataItemViewerPanel.DataType=Тип данных:
 SimpleDataItemViewerPanel.Size=Размер:
 SimpleDataItemViewerPanel.Text=Текст
+SimpleTextComponentPopUpMenu.Copy=Копировать
+SimpleTextComponentPopUpMenu.Paste=Вставить
+SimpleTextComponentPopUpMenu.Cut=Вырезать
 SystemOutputPanel.title=Вывод консоли
 SystemResources.findedOldSettings=Найдены сохранненные настройки предыдущей версии приложения\nПрименить эти настройки к данной версии?
 TableColumnIndexTableModel.Expression=Выражение
