See RS-107191 - Fix comment tab labels - Rename the operation "ADD DESCRIPTION" to "ADD COMMENT" in the operation confirmation window

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -541,7 +541,7 @@ AbstractCreateObjectPanel.check=Check
 AbstractCreateObjectPanel.computed=Computed By
 AbstractCreateObjectPanel.createSQL=DDL to create
 AbstractCreateObjectPanel.default-value=Default Value
-AbstractCreateObjectPanel.description=Description
+AbstractCreateObjectPanel.description=Comment
 AbstractCreateObjectPanel.deterministic=Deterministic
 AbstractCreateObjectPanel.table=Table
 AbstractCreateObjectPanel.text=Text
@@ -1057,7 +1057,7 @@ CreatePackagePanel.Header=Header
 CreateProcedureFunctionPanel.Body={0} body
 CreateProcedureFunctionPanel.Cursors=Cursors
 CreateProcedureFunctionPanel.DDL=DDL
-CreateProcedureFunctionPanel.Description=Description
+CreateProcedureFunctionPanel.Description=Comment
 CreateProcedureFunctionPanel.Edit=Edit
 CreateProcedureFunctionPanel.FUNCTION=Function
 CreateProcedureFunctionPanel.InputParameters=Input Parameters
@@ -1097,7 +1097,7 @@ CreateTriggerPanel.database-trigger=Database trigger
 CreateTriggerPanel.event=Event
 CreateTriggerPanel.position=Position
 CreateTriggerPanel.table-trigger=Table trigger
-CreateUDFPanel.Description=Description
+CreateUDFPanel.Description=Comment
 CreateUDFPanel.EntryPoint=Entry Point
 CreateUDFPanel.InputParameters=Input Parameters
 CreateUDFPanel.MaxCountCharacters=Max Count Characters
@@ -1484,7 +1484,7 @@ InsertColumnPanel.Autoincrement=Autoincrement
 InsertColumnPanel.Check=Check
 InsertColumnPanel.ComputedBy=Computed by
 InsertColumnPanel.DefaultValue=Default Value
-InsertColumnPanel.Description=Description
+InsertColumnPanel.Description=Comment
 InsertColumnPanel.Domain=Domain
 InsertColumnPanel.NotNull=Not Null
 InsertColumnPanel.PrimaryKey=Primary Key
@@ -1755,7 +1755,7 @@ TableDefinitionPanel.Column=Column
 TableDefinitionPanel.ComputedBy=Computed by
 TableDefinitionPanel.Datatype=Datatype
 TableDefinitionPanel.DefaultValue=Default Value
-TableDefinitionPanel.Description=Description
+TableDefinitionPanel.Description=Comment
 TableDefinitionPanel.Domain=Domain
 TableDefinitionPanel.Encoding=Encoding
 TableDefinitionPanel.NULL=NULL
@@ -1781,7 +1781,7 @@ TableSelectionPanel.connection=Connection:
 TableSelectionPanel.schema=Schema:
 TableSelectionPanel.table=Table:
 TableTriggersTableModel.Active=Active
-TableTriggersTableModel.Description=Description
+TableTriggersTableModel.Description=Comment
 TableTriggersTableModel.Position=Position
 TableTriggersTableModel.TriggerName=Trigger Name
 TableTriggersTableModel.TriggerType=Trigger Type
