--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1057,7 +1057,7 @@ CreatePackagePanel.Header=Заголовок
 CreateProcedureFunctionPanel.Body=Тело {0}
 CreateProcedureFunctionPanel.Cursors=Курсоры
 CreateProcedureFunctionPanel.DDL=DDL
-CreateProcedureFunctionPanel.Description=Описание
+CreateProcedureFunctionPanel.Description=Комментарий
 CreateProcedureFunctionPanel.Edit=Редактирование
 CreateProcedureFunctionPanel.FUNCTION=функции
 CreateProcedureFunctionPanel.InputParameters=Входные параметры
@@ -1097,7 +1097,7 @@ CreateTriggerPanel.database-trigger=Триггер базы данных
 CreateTriggerPanel.event=Событие
 CreateTriggerPanel.position=Позиция
 CreateTriggerPanel.table-trigger=Табличный триггер
-CreateUDFPanel.Description=Описание
+CreateUDFPanel.Description=Комментарий
 CreateUDFPanel.EntryPoint=Точка входа
 CreateUDFPanel.InputParameters=Входные параметры
 CreateUDFPanel.MaxCountCharacters=Максимальное количество символов
@@ -1484,7 +1484,7 @@ InsertColumnPanel.Autoincrement=Автоинкремент
 InsertColumnPanel.Check=Проверка
 InsertColumnPanel.ComputedBy=Вычисляется как
 InsertColumnPanel.DefaultValue=Значение по умолчанию
-InsertColumnPanel.Description=Описание
+InsertColumnPanel.Description=Комментарий
 InsertColumnPanel.Domain=Домен
 InsertColumnPanel.NotNull=NOT NULL
 InsertColumnPanel.PrimaryKey=Первичный ключ
@@ -1755,7 +1755,7 @@ TableDefinitionPanel.Column=Столбец
 TableDefinitionPanel.ComputedBy=Вычисляется как
 TableDefinitionPanel.Datatype=Тип данных
 TableDefinitionPanel.DefaultValue=Значение по умолчанию
-TableDefinitionPanel.Description=Описание
+TableDefinitionPanel.Description=Комментарий
 TableDefinitionPanel.Domain=Домен
 TableDefinitionPanel.Encoding=Кодировка
 TableDefinitionPanel.NULL=NULL
@@ -1781,7 +1781,7 @@ TableSelectionPanel.connection=Connection:
 TableSelectionPanel.schema=Schema:
 TableSelectionPanel.table=Table:
 TableTriggersTableModel.Active=Активность
-TableTriggersTableModel.Description=Описание
+TableTriggersTableModel.Description=Комментарий
 TableTriggersTableModel.Position=Позиция
 TableTriggersTableModel.TriggerName=Имя триггера
 TableTriggersTableModel.TriggerType=Тип триггера
