Added lable translation for ExecuteQueryDialog.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1209,6 +1209,10 @@ ExecuteProcedurePanel.ObjectName=Object Name:
 ExecuteProcedurePanel.ObjectType.tool-tip=Select the database object type
 ExecuteProcedurePanel.ObjectType=Object Type:
 ExecuteProcedurePanel.Parameter=Parameter
+ExecuteQueryDialog.NameOperation=Name operation
+ExecuteQueryDialog.Status=Status
+ExecuteQueryDialog.Copy=Copy
+ExecuteQueryDialog.Success=Success
 ExecuteQueryDialog.FullLog=Full Log
 ExecuteQueryDialog.Single=Selection Result
 ExecuteQueryDialog.commit=Commit
