--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1209,6 +1209,10 @@ ExecuteProcedurePanel.ObjectName=Имя объекта:
 ExecuteProcedurePanel.ObjectType.tool-tip=Выбрать тип объекта базы данных
 ExecuteProcedurePanel.ObjectType=Тип объекта:
 ExecuteProcedurePanel.Parameter=Параметр
+ExecuteQueryDialog.NameOperation=Имя операции
+ExecuteQueryDialog.Status=Статус
+ExecuteQueryDialog.Copy=Копировать
+ExecuteQueryDialog.Success=Успех
 ExecuteQueryDialog.FullLog=Полный лог
 ExecuteQueryDialog.Single=Результат выделения
 ExecuteQueryDialog.commit=Подтвердить
