See RS-92836, RS-93002, RS-61581 make the result set columns width by content

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1685,6 +1685,8 @@ ReddatabaseAPI.unknown-password=Unknown Login or Password. Try again?
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes
 ReleaseNotesCommand.releaseNotes=Release Notes
 RestoreDefaultsCommand.restoreDefaults=Restore Defaults
+ResultSetTablePopupMenu.AutoWidthForCols=Show all columns without scrolling
+ResultSetTablePopupMenu.ColumnWidthByContent=Column width by content
 ResultSetTablePopupMenu.CopySelectedCells-CommaSeparated=Copy Selected Cells - comma-separated
 ResultSetTablePopupMenu.CopySelectedCells-CommaSeparatedAndQuoted=Copy Selected Cells - comma-separated and quoted
 ResultSetTablePopupMenu.CopySelectedCells-CommaSeparatedAndQuotedWithNames=Copy Selected Cells - comma-separated and quoted with names
@@ -1701,6 +1703,7 @@ ResultSetTablePopupMenu.RecordDataItemViewer=Record Data Item Viewer
 ResultSetTablePopupMenu.SelectColumn=Select Column
 ResultSetTablePopupMenu.SelectRow=Select Row
 ResultSetTablePopupMenu.SetNull=Set NULL
+ResultSetTablePopupMenu.TransposeRow=Transpose Row
 ResultSetTablePopupMenu.View=View
 RootDatabaseObjectNode.error.add=Node must be of type DatabaseHostNode
 SchemaTree.error.exportAsDrag=Node selection pending before drag
