See RS-88457 - Add online validation for DB tables

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -792,6 +792,7 @@ BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.reload=Reload {0}
 BrowserTreePopupMenu.reselectivity=Recalculate index statistics
 BrowserTreePopupMenu.reselectivityAll=Recalculate the statistics of all indices
+BrowserTreePopupMenu.onlineTableValidation=Online table validation
 BrowserTreePopupMenu.selectAll=Select all {0}
 BrowserTreePopupMenu.selectStatement=SELECT statement
 BrowserTreePopupMenu.switch=Active
