--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -792,6 +792,7 @@ BrowserTreePopupMenu.recycle=Переподключиться
 BrowserTreePopupMenu.reload=Перезагрузить {0}
 BrowserTreePopupMenu.reselectivity=Пересчитать статистику
 BrowserTreePopupMenu.reselectivityAll=Пересчитать статистику всех индексов
+BrowserTreePopupMenu.onlineTableValidation=Онлайн валидация таблицы
 BrowserTreePopupMenu.selectAll=Выбрать все {0}
 BrowserTreePopupMenu.selectStatement=SELECT запрос
 BrowserTreePopupMenu.switch=Активность
