See RS-93007 - Fix formatting of TIMESTAMP resultSet values. - Add ability to set the template separately for DATE, TIME and TIMESTAMP resultSet values.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -374,6 +374,8 @@ preferences.DatabaseToolBar=Database Tool Bar
 preferences.DatabaseTools=Database Tools
 preferences.Datatype=Datatype
 preferences.DatePatternFormat=Date Pattern Format
+preferences.TimePatternFormat=Time Pattern Format
+preferences.TimestampPatternFormat=Timestamp Pattern Format
 preferences.DateTimeValueCellBackground=Date/time value cell background
 preferences.DecorateDialogs=Decorate dialogs
 preferences.DecorateFrame=Decorate frame
