--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -373,7 +373,9 @@ preferences.DatabaseTableDataViewTab=Вкладка с данными табли
 preferences.DatabaseToolBar=Панель инструментов базы данных
 preferences.DatabaseTools=Инструменты базы данных
 preferences.Datatype=Тип данных
-preferences.DatePatternFormat=Шаблон даты-времени
+preferences.DatePatternFormat=Шаблон даты
+preferences.TimePatternFormat=Шаблон времени
+preferences.TimestampPatternFormat=Шаблон даты-времени
 preferences.DateTimeValueCellBackground=Фон ячейки со значением даты/времени
 preferences.DecorateDialogs=Стилизовать диалоги
 preferences.DecorateFrame=Стилизовать окна
