See RS-92788 - Add ability to switch automatic line wrapping in the Query Editor

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1613,6 +1613,8 @@ QueryEditor.MaxRows.tool-tip=Enable/disable max records
 QueryEditor.MaxRows=Max Rows:
 QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
 QueryEditor.StopOnError=Stop on error
+QueryEditor.LineWrapper.tool-tip=Enable/disable automatic line wrapping
+QueryEditor.LineWrapper=Wrap lines
 QueryEditor.TransactionIsolationLevel=Transaction isolation level:
 QueryEditor.autocommit=Auto-commit={0}
 QueryEditor.script=script
