See RS-88457 - Add online table validation panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -187,6 +187,8 @@ action.import-connections-from-DB-command=Import Connections from DB
 action.import-connections-from-file-command=Import Connections from file
 action.import-data-from-file-command.description=Import data into database from local files (*.csv, *.xlsx, ...)
 action.import-data-from-file-command=Import Data From File
+action.table-validation-command=Table Validation
+action.table-validation-command.description=Allows online validation of DB tables
 action.import-delimited-command=Import from Delimited File
 action.import-xml-command=Import from XML
 action.insert-row-command=Create a new table column after the current selection
@@ -1782,6 +1784,18 @@ TableDefinitionPanel.Subtype=Subtype
 TableDefinitionPanel.Table=Table
 TableDefinitionPanel.Tablespace=Tablespace
 TableDefinitionPanel.TypeOf=Type of
+TableValidationPanel.Title=Table Validation
+TableValidationPanel.Tables=Tables
+TableValidationPanel.Indexes=Indexes
+TableValidationPanel.StartValidationButton=Start
+TableValidationPanel.HideTimestampsCheckBox=Hide Timestamps Labels
+TableValidationPanel.Connection=Connection:
+TableValidationPanel.UnableCreateConnections=Unable to connect selected database
+TableValidationPanel.AvailableTablesLabel=Available Tables
+TableValidationPanel.SelectedTablesLabel=Selected Tables
+TableValidationPanel.AvailableIndexLabel=Available Indexes
+TableValidationPanel.SelectedIndexLabel=Selected Indexes
+TableValidationPanel.NoTableSelected=No tables for validation selected
 TablePrivilegeTab.Grantable=Grantable
 TablePrivilegeTab.Grantee=Grantee
 TablePrivilegeTab.Grantor=Grantor
