--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -187,6 +187,8 @@ action.import-connections-from-DB-command=Импорт подключений и
 action.import-connections-from-file-command=Импорт подключений из файла
 action.import-data-from-file-command.description=Импорт данных из локального файла в БД (*.csv, *.xlsx, ...)
 action.import-data-from-file-command=Импорт данных из файла
+action.table-validation-command=Валидация таблиц
+action.table-validation-command.description=Позволяет провести онлайн валидацию таблиц БД
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
@@ -1782,6 +1784,18 @@ TableDefinitionPanel.Subtype=Подтип
 TableDefinitionPanel.Table=Таблица
 TableDefinitionPanel.Tablespace=Табличное пространство
 TableDefinitionPanel.TypeOf=TYPE OF
+TableValidationPanel.Title=Валидация таблиц
+TableValidationPanel.Tables=Таблицы
+TableValidationPanel.Indexes=Индексы
+TableValidationPanel.StartValidationButton=Старт
+TableValidationPanel.HideTimestampsCheckBox=Скрыть метки времени
+TableValidationPanel.Connection=Соединение:
+TableValidationPanel.UnableCreateConnections=Невозможно подключиться к выбранной базе данных
+TableValidationPanel.AvailableTablesLabel=Доступные таблицы
+TableValidationPanel.SelectedTablesLabel=Выбранные таблицы
+TableValidationPanel.AvailableIndexLabel=Доступные индексы
+TableValidationPanel.SelectedIndexLabel=Выбранные индексы
+TableValidationPanel.NoTableSelected=Не выбрано ни одной таблицы для валидации
 TablePrivilegeTab.Grantable=Предоставляемый
 TablePrivilegeTab.Grantee=Получатель прав
 TablePrivilegeTab.Grantor=Правообладатель
