Correct description of datetime templates (RS-140874)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -2907,16 +2907,18 @@ ER-диаграмма визуализирует табличные связи, 
 	\endhead
 	\hline
 	Изменяемость ширины столбцов &  Возможность менять ширину столбцов таблицы результатов \\\hline
-	Перестановка столбцов & \\\hline
-	Показывать номера строк & \\\hline
-	Ширина столбца & \\\hline
-	Высота столбца &  \\\hline
+	Перестановка столбцов & Возможность перемещать столбцы таблицы результатов\\\hline
+	Показывать номера строк & Отображать ли номера строк в таблице результатов\\\hline
+	Ширина столбца & Ширина столбца таблицы результатов в пикселях\\\hline
+	Высота столбца &  Высота столбца таблицы результатов в пикселях\\\hline
 	Сохранять ширину столбцов между запросами & Запоминать настроенную самостоятельно ширину столбцов в следующих результатах запросов \\\hline
-	Шаблон даты-времени & Шаблон даты-времени для типов данных \ttt{DATE,TIME,TIMESTAMP}. В таблице ниже рассмотрены подробно параметры шаблона\\\hline
-	Текст в ячейке со значением null &  \\\hline
+	Шаблон даты & Шаблон даты для типа данных \ttt{DATE}. В таблице ниже рассмотрены подробно параметры шаблона\\\hline
+	Шаблон времени & Шаблон времени для типа данных \ttt{TIME}. В таблице ниже рассмотрены подробно параметры шаблона\\\hline
+	Шаблон даты-времени & Шаблон даты-времени для типа данных \ttt{TIMESTAMP}. В таблице ниже рассмотрены подробно параметры шаблона\\\hline
+	Текст в ячейке со значением null & Текст, который будет отображаться в ячейке со значением null\\\hline
 	Открывать визуализатор данных по двойному клику на ячейку & Двойной клик по ячейке таблицы открывает диалоговое окно \textit{Record Data Item Viewer} с подробной информацией о типе данных, размере и содержимом ячейки \\\hline
 	Транспонировать результат с одной строкой & Транспонировать таблицу, когда строки становятся столбцами и наоборот, если результат из одной строки \\\hline
-	Выравнивание числовых значений по правому краю &  \\\hline
+	Выравнивание числовых значений по правому краю & Выравнивать ли числовые значения по правому краю\\\hline
 	Использовать форму для добавления/удаления строк & При добавлении или удалении записи из таблицы на вкладке \textit{Данные} (при редактировании таблицы базы данных) будет появляться диалоговое окно с подтверждением операции. \\\hline
 	Использовать другой цвет для значений с null при добавлении/удалении записей & Подсвечивать значения равные \ttt{NULL} при добавлении/удалении записей на вкладке \textit{Данные} (при редактировании таблицы базы данных) \\\hline
 	Количество подгружаемых записей за раз & Число первоначально загружаемых строк, остальные строки подгружаются при скролле \\\hline
@@ -2964,7 +2966,8 @@ ER-диаграмма визуализирует табличные связи, 
 	mm & минуты с лидирующим нулем & 32 \\\hline
 	s & секунды без лидирующих нулей & 11 \\\hline
 	ss & секунды с лидирующим нулем & 11 \\\hline
-	S & миллисекунды & 109 \\\hline
+	S & миллисекунды с округлением до десятых & 1 \\\hline
+	SS & миллисекунды с округлением до сотых & 11 \\\hline
 	z & часовой пояс & EET \\\hline
 	Z & часовой пояс в формате RFC 822 & +0200 \\\hline
 	' & символ экранирования для текста & 'Date=' \\\hline
