add AnalisePanel to Trace Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1811,6 +1811,7 @@ TableTriggersTableModel.Description=Comment
 TableTriggersTableModel.Position=Position
 TableTriggersTableModel.TriggerName=Trigger Name
 TableTriggersTableModel.TriggerType=Trigger Type
+TraceManagerPanel.Analise=Analise
 TraceManagerPanel.Body=Body
 TraceManagerPanel.BuildConfigurationFile=BuildConfigurationFile
 TraceManagerPanel.Charset=Charset
