--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1811,6 +1811,7 @@ TableTriggersTableModel.Description=Комментарий
 TableTriggersTableModel.Position=Позиция
 TableTriggersTableModel.TriggerName=Имя триггера
 TableTriggersTableModel.TriggerType=Тип триггера
+TraceManagerPanel.Analise=Анализ
 TraceManagerPanel.Body=Тело события
 TraceManagerPanel.BuildConfigurationFile=Сгенерировать файл конфигурации
 TraceManagerPanel.Charset=Кодировка
