See RS-90414 - Add tree view of DB Comparer execution result

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -931,6 +931,11 @@ ComparerDBPanel.SearchingForDependencies=Searching for dependencies
 ComparerDBPanel.CreatingStubs=Creating stubs for %s
 ComparerDBPanel.LoadFullInfoForObjects=Loading full info for %s
 ComparerDBPanel.LoadColumnsForAllTables=Loading columns for %s
+ComparerDBPanel.TreeView=View
+ComparerDBPanel.DatabaseChanges=Database Changes
+ComparerDBPanel.CreateObjects=Objects To Create
+ComparerDBPanel.AlterObjects=Objects To Alter
+ComparerDBPanel.DropObjects=Objects To Drop
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
