--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -903,6 +903,7 @@ ComparerDBPanel.PropertiesLabel=Properties
 ComparerDBPanel.OutputLabel=Output
 ComparerDBPanel.RDBVersionBelow3=\nAt least one of the connection use RDB version below 3.0.\nUser, Package, Function, Triggers for DDLs, Tablespace & Job will not be included in the comparison.
 ComparerDBPanel.RDBVersionBelow4=\nAt least one of the connection use RDB version below 4.0.\nTablespace & Job will not be included in the comparison.
+ComparerDBPanel.FDBCompared=\nAt least one of the connection use Firebird connection.\nTablespace & Job will not be included in the comparison.
 ComparerDBPanel.ScriptSaved=Script was saved successfully.
 ComparerDBPanel.SavedTo=Saved to: 
 ComparerDBPanel.UnableCompareSampleConnections=Unable to compare.\nThe same connections selected.
