Add localization to the DriversTreePanel (See RS-96698)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1168,6 +1168,18 @@ DockedTabPane.menuItem.minimizeAll=Minimize All
 DomainPanel.Domain=Domain:
 DomainPanel.EditDomain=Edit domain
 DomainPanel.NewDomain=New domain
+DriversTreePanel.jdbcDrivers=JDBC Drivers
+DriversTreePanel.newDriver=New driver
+DriversTreePanel.deleteDriver=Remove driver
+DriversTreePanel.moveDriverUp=Move up
+DriversTreePanel.moveDriverDown=Move down
+DriversTreePanel.notRemoveDefaultDriver=The ODBC driver definition is a built-in and can not be removed
+DriversTreePanel.confirmRemoving=Are you sure you want to delete the %s driver?
+DriversTreePanel.duplicate=Duplicate
+DriversTreePanel.remove=Remove
+DriversTreePanel.copy=Copy
+DriversTreePanel.driverProperties=Driver properties
+DriversTreePanel.duplicateLabel=Create copy of driver %s
 EditConstraintPanel.Constraint=Constraint
 EditConstraintPanel.DeleteRule=Delete rule
 EditConstraintPanel.Index=Index
