--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1168,6 +1168,18 @@ DockedTabPane.menuItem.minimizeAll=Уменьшить все
 DomainPanel.Domain=Домен:
 DomainPanel.EditDomain=Редактировать домен
 DomainPanel.NewDomain=Создать домен
+DriversTreePanel.jdbcDrivers=JDBC Драйверы
+DriversTreePanel.newDriver=Новый драйвер
+DriversTreePanel.deleteDriver=Удалить драйвер
+DriversTreePanel.moveDriverUp=Переместить вверх
+DriversTreePanel.moveDriverDown=Переместить вниз
+DriversTreePanel.notRemoveDefaultDriver=Встроенный ODBC драйвер не может быть удален
+DriversTreePanel.confirmRemoving=Вы действительно хотите удалить драйвер %s?
+DriversTreePanel.duplicate=Дублировать
+DriversTreePanel.remove=Удалить
+DriversTreePanel.copy=Копия
+DriversTreePanel.driverProperties=Свойства драйвера
+DriversTreePanel.duplicateLabel=Создать копию драйвера %s
 EditConstraintPanel.Constraint=Ограничение
 EditConstraintPanel.DeleteRule=Правило удаления
 EditConstraintPanel.Index=Индекс
